# spaceinv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: model0.bdm  model1.bdm  model2.bdm  wls1.bdm
assets/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  Doxyfile  SpaceInvApp.cpp
src/spaceinv/: CMakeLists.txt  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Floor.cpp  Floor.hpp  Game.cpp  Game.hpp  LookAtCamera.hpp  Mesh.hpp  Missile.cpp  Missile.hpp  Model.cpp  Model.hpp  ModelMaterial.cpp  ModelMaterial.hpp  ModelPart.hpp  PhongPipeline.cpp  PhongPipeline.hpp  Player.cpp  Player.hpp  Scenario.cpp  Scenario.hpp  SpaceInvApp.cpp  SpaceInvApp.hpp  TextureLoader.hpp  Updatable.hpp
src/spaceinv/gl3/: Buffer.hpp  Device.cpp  Device.hpp  Material.hpp  Program.hpp  Subset.hpp  Texture.hpp
src/spaceinv/render/: BdmModel.cpp  BdmModel.hpp  BdmModelLoader.cpp  BdmModelLoader.hpp  BdmModelPart.cpp  BdmModelPart.hpp  LookAtCamera.hpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  PhongMaterial.cpp  PhongMaterial.hpp  PhongPipeline.cpp  PhongPipeline.hpp  PhongPipeline2.cpp  PhongPipeline2.hpp  TextureLoader.cpp  TextureLoader.hpp
src/spaceinv/render/gl3/: Buffer.hpp  BufferGL.cpp  BufferGL.hpp  Device.cpp  Device.hpp  DeviceGL.cpp  DeviceGL.hpp  MaterialGL.hpp  MeshGL.cpp  MeshGL.hpp  Program.cpp  ProgramGL.cpp  ProgramGL.hpp  Subset.hpp  TextureBufferGL.cpp  TextureBufferGL.hpp  TextureGL.cpp  TextureGL.hpp
src/xe/: Array.hpp  Boundary.hpp  Box.hpp  Buffer.hpp  CMakeLists.txt  Common.hpp  DataFormat.hpp  DataType.hpp  FileLocator.cpp  FileLocator.hpp  FileUtil.hpp  Matrix.hpp  PreDef.hpp  Quaternion.hpp  Traits.hpp  Vector.hpp
src/xe/gfx/: BufferType.hpp  Device.cpp  Device.hpp  Image.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  PixelFormat.cpp  PixelFormat.hpp  Program.hpp  ShaderType.hpp  Subset.hpp  Texture.cpp  Texture.hpp  UniformFormat.hpp
src/xe/gfx/gl3/: BufferGL.cpp  BufferGL.hpp  DeviceGL.cpp  DeviceGL.hpp  InputManagerGLFW.cpp  InputManagerGLFW.hpp  MaterialGL.hpp  MeshGL.cpp  MeshGL.hpp  ProgramGL.cpp  ProgramGL.hpp  ShaderGL.cpp  ShaderGL.hpp  Texture.cpp  TextureBufferGL.cpp  TextureBufferGL.hpp  TextureGL.cpp  TextureGL.hpp  Util.hpp
src/xe/input/: Event.hpp  EventHandler.hpp  EventImpl.hpp  InputDevice.hpp  InputManager.hpp  InputManagerImpl.cpp  InputManagerImpl.hpp  KeyCode.hpp  KeyStatus.hpp  KeyStroke.hpp  Keyboard.hpp  KeyboardStatus.cpp  KeyboardStatus.hpp  Mouse.hpp
src/xe/sfx/: Device.hpp  Source.hpp
src/xe/sfx/al/: BufferAL.cpp  BufferAL.hpp  SourceAL.cpp  SourceAL.hpp
src/xe/sg/: AssetsLibrary.cpp  AssetsLibrary.hpp  Box.hpp  Camera.hpp  Forward.hpp  Generators.hpp  Geometry.hpp  Intersect.hpp  Light.cpp  Light.hpp  Pipeline.cpp  Pipeline.hpp  Pipeline2.cpp  Pipeline2.hpp  Pipeline2Base.cpp  Pipeline2Base.hpp  Plane.hpp  Ray.hpp  Renderable.cpp  Renderable.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneManager.hpp  SceneManagerImpl.cpp  SceneManagerImpl.hpp  SceneManagerImpl2.cpp  SceneManagerImpl2.hpp  SceneNode.hpp  SceneNodeAnimator.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneRendererGeneric.cpp  SceneRendererGeneric.hpp  SceneRendererImpl.cpp  SceneRendererImpl.hpp  Sphere.hpp  Triangle.hpp
